# c4pricing

./: .pre-commit-config.yaml  APPLY_THESE_CHANGES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
c4pricing/: apis_legacy.py  hooks.py  modules.txt
c4pricing/api/: __init__.py  item_code_rules.py  item_group_filters.py  stock_entry.py
c4pricing/c4pricing/custom/: opportunity.json  opportunity_item.json
c4pricing/c4pricing/doctype/boq/: boq.js  boq.json  boq.py
c4pricing/c4pricing/doctype/contractors_table/: contractors_table.json
c4pricing/c4pricing/doctype/cost_type/: cost_type.js  cost_type.json  cost_type.py
c4pricing/c4pricing/doctype/costing_note/: costing_note.js  costing_note.json  costing_note.py
c4pricing/c4pricing/doctype/costing_note_items/: costing_note_items.json
c4pricing/c4pricing/doctype/expenses_table/: expenses_table.json
c4pricing/c4pricing/doctype/item_type/: item_type.js  item_type.json  item_type.py  (+1 more)
c4pricing/custom/item/: item.py
c4pricing/doctype/boq/: boq.js  boq.json  boq.py
c4pricing/doctype/contractors_table/: contractors_table.json
c4pricing/doctype/cost_type/: cost_type.json  test_cost_type.py
c4pricing/doctype/costing_note/: costing_note.js  costing_note.json  costing_note.py
c4pricing/doctype/costing_note_items/: costing_note_items.json
c4pricing/doctype/expenses_table/: expenses_table.json
c4pricing/doctype/labor_costs/: labor_costs.json
c4pricing/doctype/material_costs/: material_costs.json
c4pricing/fixtures/: custom_field.json
c4pricing/overrides/: item_flags.py  item_naming.py
(+22 files in other folders)
