[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "c4pricing"
version = "0.0.1"
description = "C4 Pricing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Connect 4 Systems", email = "info@connect4systems.com" }]
dependencies = []

[tool.flit.module]
name = "c4pricing"
