[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "c4pricing"
version = "0.0.1"
description = "C4 Pricing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Connect 4 Systems", email = "info@connect4systems.com" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["c4pricing*"]
